--- a/css/project.css
+++ b/css/project.css
@@ -325,66 +325,64 @@ footer p {
     padding: 10px 10px;
   }
 
-  /* navigation bar */
-  .navbar {
-    background-color: #FFFAF6;
-    list-style-type: none;
-    margin: 0;
-    overflow: hidden;
-    position:fixed;
-    padding: 0;
-    width: 100%;
-  }
+
+     /* navigation bar */
+     .navbar {
+       background-color: #FFF2ED;
+       list-style-type: none;
+       margin: 0;
+       overflow: hidden;
+       position:fixed;
+       padding: 0;
+       width: 100%;
+       z-index: 1;
+     }
 
 
-  #work {
-    color: black;
-    display: inline-block;
-    float: right;
-    margin: 5px 5px;
-    padding: 10px 5px;
-    text-align: center;
-    text-decoration: none;
-  }
+     #work {
+       color: black;
+       display: inline-block;
+       float: right;
+       margin: 5px 5px;
+       padding: 10px 5px;
+       text-align: center;
+       text-decoration: none;
+     }
 
-   #about_me {
-    color: black;
-    display: inline-block;
-    float: right;
-    margin: 5px 5px;
-    padding: 10px 5px;
-    text-align: center;
-    text-decoration: none;
-  }
+      #about_me {
+       color: black;
+       display: inline-block;
+       float: right;
+       margin: 5px 5px;
+       padding: 10px 5px;
+       text-align: center;
+       text-decoration: none;
+     }
 
-  #contact_nav {
-    background-color: #F3DDCC;
-    display: inline-block;
-    float: right;
-    color: black;
-    padding: 10px 5px;
-    margin: 5px 5px;
-    text-align: center;
-    text-decoration: none;
+     #contact_nav {
+       display: inline-block;
+       float: right;
+       color: black;
+       padding: 10px 5px;
+       margin: 5px 5px;
+       text-align: center;
+       text-decoration: none;
 
-  }
-
-  #contact_nav:hover {
-    background-color: #FFDFE3;
-  }
-
-  #logo  {
-    float: left;
-    margin: 5px 0px 5px 20px;
-    object-fit: contain;
-    width: 6%;
-  }
+     }
 
 
-  nav a:hover {
-    background-color: #FFDFE3;
-    color: black;
-  }
+     #logo  {
+       float: left;
+       margin: 5px 0px 5px 20px;
+       object-fit: contain;
+       width: 6%;
+     }
+
+
+     nav a:hover {
+       background-color: #FFDFE3;
+       color: black;
+     }
   /*images*/
 
   .center {
@@ -453,7 +451,6 @@ footer p {
    }
 
    .hero a:link, a:visited {
-    background-color: #F3DDCC;
     color: black;
     display: inline-block;
     font-size: 18px;
@@ -464,7 +461,6 @@ footer p {
    }
 
    .hero a:hover,  a:active {
-    background-color: #FFDFE3;
    }
 
    .hero p {
@@ -550,7 +546,6 @@ footer p {
       }
 
       .hero a:link, a:visited {
-       background-color: #F3DDCC;
        color: black;
        display: inline-block;
        font-size: 18px;
@@ -561,63 +556,67 @@ footer p {
       }
 
       .hero a:hover,  a:active {
-       background-color:  #FFDFE3;
-      }
-
-      /* navigation bar */
-      .navbar {
-        background-color: #FFFAF6;
-        list-style-type: none;
-        margin: 0;
-        overflow: hidden;
-        position:fixed;
-        padding: 0;
-        width: 100%;
-      }
-
-
-      #work {
-        color: black;
-        display: inline-block;
-        float: right;
-        margin: 5px 5px;
-        padding: 10px 5px;
-        text-align: center;
-        text-decoration: none;
-      }
-
-       #about_me {
-        color: black;
-        display: inline-block;
-        float: right;
-        margin: 5px 5px;
-        padding: 10px 5px;
-        text-align: center;
-        text-decoration: none;
-      }
-
-      #contact_nav {
-        background-color: #F3DDCC;
-        display: inline-block;
-        float: right;
-        color: black;
-        padding: 10px 5px;
-        margin: 5px 5px;
-        text-align: center;
-        text-decoration: none;
 
       }
 
-      #contact_nav:hover {
-        background-color: #FFDFE3;
-      }
 
-      #logo  {
-        float: left;
-        margin: 5px 0px 5px 20px;
-        object-fit: contain;
-        width: 7%;
-      }
+         /* navigation bar */
+         .navbar {
+           background-color: #FFF2ED;
+           list-style-type: none;
+           margin: 0;
+           overflow: hidden;
+           position:fixed;
+           padding: 0;
+           width: 100%;
+           z-index: 1;
+         }
+
+
+         #work {
+           color: black;
+           display: inline-block;
+           float: right;
+           margin: 5px 5px;
+           padding: 10px 5px;
+           text-align: center;
+           text-decoration: none;
+         }
+
+          #about_me {
+           color: black;
+           display: inline-block;
+           float: right;
+           margin: 5px 5px;
+           padding: 10px 5px;
+           text-align: center;
+           text-decoration: none;
+         }
+
+         #contact_nav {
+           display: inline-block;
+           float: right;
+           color: black;
+           padding: 10px 5px;
+           margin: 5px 5px;
+           text-align: center;
+           text-decoration: none;
+
+         }
+
+
+         #logo  {
+           float: left;
+           margin: 5px 0px 5px 20px;
+           object-fit: contain;
+           width: 6%;
+         }
+
+
+         nav a:hover {
+           background-color: #FFDFE3;
+           color: black;
+         }
 
 
       .hero {
