--- a/css/style.css
+++ b/css/style.css
@@ -521,8 +521,12 @@ footer p {
 
    h1 {
      margin-top: 50px;
+     font-size: 5vh;
    }
 
+   .hero p {
+     font-size: 2vh;
+   }
    /* design section */
 
    .design_process {
@@ -631,7 +635,12 @@ footer p {
    }
 
    h1 {
-     margin-top: 100px;
+     margin-top: 50px;
+     font-size: 5vh;
+   }
+
+   .hero p {
+     font-size: 2vh;
    }
 
    /* navigation bar */
