--- a/css/busybus.css
+++ b/css/busybus.css
@@ -135,7 +135,7 @@ nav a:hover {
    margin-bottom: 30px;
    width: 200px;
    color: black;
-   font-size: 1.5vh;
+   font-size: 18px;
    padding: 14px 25px;
    text-align: center;
    text-decoration: none;
@@ -145,8 +145,8 @@ nav a:hover {
   .main p {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5vh;
-    margin: 15px 40px;
-    line-height: 130%;
+    margin: 40px;
+    line-height: 150%;
   }
 
   /*images*/
