--- a/css/project.css
+++ b/css/project.css
@@ -141,8 +141,8 @@ nav a:hover {
   .main p {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5vh;
-    margin: 15px 40px;
-    line-height: 130%;
+    margin: 40px;
+    line-height: 150%;
   }
 
   /*images*/
