--- a/css/style.css
+++ b/css/style.css
@@ -17,22 +17,22 @@ h1{
 }
 
 h3 {
-  font-family: 'Playfair Display', serif;
-  font-size: 4vh;
-  line-height: 167%;
+     font-family: 'Montserrat', serif;
+     font-weight: 900;
+     font-size: 3vh;
+     line-height: 167%;
 }
 
 h4 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', serif;
   font-size: 3vh;
 }
 
 h2 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', serif;
   font-size: 3vh;
   line-height: 150%;
   margin: 20px;
-
 }
 
 /* navigation bar */
@@ -129,6 +129,7 @@ nav a:hover {
  line-height: 150%;
  padding-top: 10px;
  padding-bottom: 10px;
+ margin: 10px auto;
 }
 
 
@@ -196,8 +197,8 @@ nav a:hover {
     }
 
 .design {
-      height: auto;
-      width: 50%;
+      height: 700px;
+      width: 70%;
     }
 
 /*slider*/
@@ -536,8 +537,9 @@ nav a:hover {
     }
 
 .connect {
-      background-color: #FFFAF6;
+      background-color: white;
       text-align: center;
+      height: 300px;
     }
 
 .connect a:link, a:visited {
@@ -550,6 +552,116 @@ nav a:hover {
       text-decoration: none;
       margin: 10px;
     }
+
+/* work slider */
+.direction {
+  margin: 0 auto;
+  width: 800px;
+}
+
+.direction-aware-hover {
+  background: #DDD;
+  display: inline-block;
+  height: 250px;
+  margin: 0;
+  overflow: hidden;
+  position: relative;
+  width: 250px;
+}
+
+.direction-aware-hover > * {
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: rotate(45deg);
+  z-index: 1;
+}
+
+.direction-aware-hover__left {
+  left: -70.75%;
+  right: 70.75%;
+}
+
+.direction-aware-hover__right {
+  left: 70.75%;
+  right: -70.75%;
+}
+
+.direction-aware-hover__top {
+  bottom: 70.75%;
+  top: -70.75%;
+}
+
+.direction-aware-hover__bottom {
+  bottom: -70.75%;
+  top: 70.75%;
+}
+
+.direction-aware-hover__content {
+  background: #F46E90;
+  bottom: none;
+  color: #EEE;
+  height: 100%;
+  opacity: 0;
+  right: none;
+  transform: none;
+  transition: opacity .25s,
+    left .25s ease-in-out,
+    top .25s ease-in-out,
+    z-index 0s linear .25s;
+  width: 100%;
+  z-index: -1;
+}
+
+.direction-aware-hover__content:after {
+  bottom: -100%;
+  content: '';
+  left: -100%;
+  position: absolute;
+  right: -100%;
+  top: -100%;
+  z-index: -1;
+}
+
+*:hover ~ .direction-aware-hover__content {
+  transition: opacity 0s,
+    left 0s ease-in-out,
+    top 0s ease-in-out,
+    z-index 0s linear 0s;
+  z-index: 1;
+}
+
+.direction-aware-hover__left:hover ~ .direction-aware-hover__content {
+  left: -100%;
+}
+
+.direction-aware-hover__right:hover ~ .direction-aware-hover__content {
+  left: 100%;
+}
+
+.direction-aware-hover__top:hover ~ .direction-aware-hover__content {
+  top: -100%;
+}
+
+.direction-aware-hover__bottom:hover ~ .direction-aware-hover__content {
+  top: 100%;
+}
+
+
+.direction-aware-hover__content:hover {
+  left: 0;
+  opacity: 1;
+  top: 0;
+  transition: opacity 0.25s,
+    left .25s ease-in-out,
+    top .25s ease-in-out,
+    z-index 0s linear 0s;
+  z-index: 1;
+}
 
 /* contact forms */
 
