--- a/css/style.css
+++ b/css/style.css
@@ -554,114 +554,99 @@ nav a:hover {
     }
 
 /* work slider */
-.direction {
-  margin: 0 auto;
-  width: 800px;
+.workconnect {
+  margin-top: 500px;
 }
 
-.direction-aware-hover {
-  background: #DDD;
-  display: inline-block;
-  height: 250px;
-  margin: 0;
-  overflow: hidden;
-  position: relative;
-  width: 250px;
-}
-
-.direction-aware-hover > * {
-  bottom: 0;
-  left: 0;
+.gallery{
   margin: 0;
   padding: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transform: rotate(45deg);
-  z-index: 1;
-}
-
-.direction-aware-hover__left {
-  left: -70.75%;
-  right: 70.75%;
-}
-
-.direction-aware-hover__right {
-  left: 70.75%;
-  right: -70.75%;
-}
-
-.direction-aware-hover__top {
-  bottom: 70.75%;
-  top: -70.75%;
-}
-
-.direction-aware-hover__bottom {
-  bottom: -70.75%;
-  top: 70.75%;
-}
-
-.direction-aware-hover__content {
-  background: #F46E90;
-  bottom: none;
-  color: #EEE;
   height: 100%;
-  opacity: 0;
-  right: none;
-  transform: none;
-  transition: opacity .25s,
-    left .25s ease-in-out,
-    top .25s ease-in-out,
-    z-index 0s linear .25s;
+}
+
+[class*='thumbnail-']{
+  background: #000;
+  width: 33.33%;
+  height: auto;
+  float: left;
+  padding: 5px 5px 3px 5px;
+}
+
+[class*='thumbnail-'] img{
+  max-width: 100%;
+}
+
+[class*='large-']{
+  background: #000;
+  width: 90%;
+  margin: 0 auto;
+  padding: 30px;
+  display: none;
+}
+
+[class*='large-'] img{
   width: 100%;
-  z-index: -1;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
-.direction-aware-hover__content:after {
-  bottom: -100%;
-  content: '';
-  left: -100%;
+.prev{
+  color: #fff;
+  font-size: 60px;
   position: absolute;
-  right: -100%;
-  top: -100%;
-  z-index: -1;
+  top: 45%;
+  left: 10px;
+  float: left;
 }
 
-*:hover ~ .direction-aware-hover__content {
-  transition: opacity 0s,
-    left 0s ease-in-out,
-    top 0s ease-in-out,
-    z-index 0s linear 0s;
-  z-index: 1;
+.next{
+  color: #fff;
+  font-size: 60px;
+  position: absolute;
+  top: 45%;
+  right: 10px;
+  float: right;
 }
 
-.direction-aware-hover__left:hover ~ .direction-aware-hover__content {
-  left: -100%;
+.close{
+  color: #fff;
+  font-size: 30px;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  float: right;
 }
 
-.direction-aware-hover__right:hover ~ .direction-aware-hover__content {
-  left: 100%;
+[class*='thumbnail-']{
+  overflow: hidden;
+  padding: 0;
+  position: relative;
 }
 
-.direction-aware-hover__top:hover ~ .direction-aware-hover__content {
-  top: -100%;
+[class*='thumbnail-']:hover img{
+  transition: .3s linear;
+  transition-delay: 300ms;
+  transform: /* rotate(5deg) */ scale(1.4);
 }
 
-.direction-aware-hover__bottom:hover ~ .direction-aware-hover__content {
-  top: 100%;
+[class*='thumbnail-'] > .caption{
+  display: none;
+  position: absolute;
+  bottom: 0;
+  padding: 15px;
+  width: 100%;
+  background-color: black;
+  color: white;
+  opacity: 0.8;
+}
+
+[class*='thumbnail-']:hover > .caption{
+  display: block;
+
 }
 
 
-.direction-aware-hover__content:hover {
-  left: 0;
-  opacity: 1;
-  top: 0;
-  transition: opacity 0.25s,
-    left .25s ease-in-out,
-    top .25s ease-in-out,
-    z-index 0s linear 0s;
-  z-index: 1;
-}
+
 
 /* contact forms */
 
