--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 h1{
   font-family: 'Playfair Display', serif;
   font-weight: bold;
-  font-size: 10vh;
+  font-size: 12vh;
   margin-top: 200px;
 }
 
@@ -26,6 +26,7 @@ h3 {
 h4 {
   font-family: 'Montserrat', serif;
   font-size: 3vh;
+  font-weight: bold;
 }
 
 h2 {
@@ -116,6 +117,24 @@ nav a:hover {
    margin-top: 250px;
  }
 
+ #myBtn {
+   display: none;
+   position: fixed;
+   bottom: 20px;
+   right: 30px;
+   z-index: 99;
+   border: none;
+   outline: none;
+   background-color: black;
+   color: white;
+   cursor: pointer;
+   padding: 15px;
+   border-radius: 10px;
+ }
+
+ #myBtn:hover {
+   background-color: #555;
+ }
 /* main */
 .main h3 {
    text-align: center;
@@ -125,7 +144,7 @@ nav a:hover {
 
 .main p {
  font-family: 'Montserrat', sans-serif;
- font-size: 2vh;
+ font-size: 20px;
  line-height: 150%;
  padding-top: 10px;
  padding-bottom: 10px;
@@ -133,7 +152,7 @@ nav a:hover {
 }
 
 
-.trove_project a:link, a:visited {
+.project a:link, a:visited {
   border: 2px solid;
   color: black;
   display: inline-block;
@@ -143,7 +162,7 @@ nav a:hover {
   text-decoration: none;
 }
 
-.busybus_project a:link, a:visited {
+.project a:link, a:visited {
   border: 2px solid;
   color: black;
   display: inline-block;
@@ -153,35 +172,42 @@ nav a:hover {
   text-decoration: none;
 }
 
-
-.trove_project {
-  display: inline-block;
-   margin-top: 40px;
-   text-align: right;
-   vertical-align: top;
-   width: 50%;
-    }
-
-.trove {
-  display: inline-block;
-  margin-left: 150px;
-  margin-top: 40px;
-  width: 30%;
+.project {
+    min-height: 100vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center
   }
 
-.busybus_project {
-  display: inline-block;
-  margin-left: 130px;
-  margin-top: 40px;
-  vertical-align: top;
+.project img {
   width: 50%;
+}
+
+.project_info {
+  width: 40%;
+  float: right;
+}
+
+.project_info2 {
+  width: 50%;
+  float: left;
+}
+
+.medchatproject {
+    background-color: rgb(180, 233, 253);
   }
 
-.busy {
-  display: inline-block;
-      margin-top: 40px;
-      width: 30%;
+.troveproject {
+    background-color:	rgb(255, 233, 179);
   }
+
+.busproject {
+    background-color: rgb(255, 166, 128);
+  }
+
+
+
 
 /* design section */
 
@@ -198,7 +224,7 @@ nav a:hover {
 
 .design {
       height: 700px;
-      width: 70%;
+      width: 80%;
     }
 
 /*slider*/
@@ -401,6 +427,9 @@ nav a:hover {
       margin-right: auto;
     }
 
+.project_content {
+    margin: 60px;
+}
     /* busy bus project */
 .bususer {
       width: 90%;
@@ -531,11 +560,17 @@ nav a:hover {
 /* connect */
 .connect p {
       font-family: 'Montserrat', sans-serif;
-      font-size: 2vh;
+      font-size: 16px;
       line-height: 150%;
       padding: 10px 10px;
     }
 
+.footer p {
+     font-family: 'Montserrat', sans-serif;
+     font-size: 12px;
+     line-height: 150%;
+     padding: 10px 10px;
+}
 .connect {
       background-color: white;
       text-align: center;
