--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,11 @@ nav a:hover {
       line-height: 130%;
    }
 
+.projecthero img {
+      margin-bottom: 20px;
+      margin-top: 50px; 
+}
+
 .projectmain {
       margin-top: 50px;
       margin-bottom: 50px;
@@ -430,17 +435,25 @@ nav a:hover {
     }
 
 .userflow::after {
-  content: "";
-  clear: both;
-  display: table;
+      content: "";
+      clear: both;
+      display: table;
 }
-.mood, .troveblue, .mockupimage {
+.troveblue, .mockupimage {
       display: block;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 10px;
       width: 80%;
     }
+
+.mood {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 30px;
+      width: 70%;
+}
 
 .wireframeimage {
       display: block;
@@ -509,31 +522,31 @@ nav a:hover {
     }
 
 .tools {
-  display: flex;
-  margin-bottom: 50px;
+      display: flex;
+      margin-bottom: 50px;
 }
 
 .things {
-  display: flex;
+      display: flex;
 }
 .tools li {
       margin-left: 20px;
       padding: 5px;
     }
 
-  .aboutmemain  a:link, a:visited {
-          display: block;
-          border: 2px solid;
-          margin-left: auto;
-          margin-right: auto;
-          margin-top: 100px;
-          margin-bottom: 100px;
-          width: 250px;
-          color: black;
-          font-size: 18px;
-          padding: 14px 25px;
-          text-align: center;
-          text-decoration: none;
+.aboutmemain  a:link, a:visited {
+      display: block;
+      border: 2px solid;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 100px;
+      margin-bottom: 100px;
+      width: 250px;
+      color: black;
+      font-size: 18px;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
         }
 /* connect */
 .connect p {
