--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,39 @@ nav a:hover {
  width: 80%;
 }
 
+.myinfo {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+}
+
+.myinfo img {
+  width: 90%;
+  opacity: 90%;
+  border-radius: 10px;
+
+}
+
+.info_content a:link, a:visited {
+      display: block;
+      border: 2px solid;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      width: 200px;
+      color: black;
+      font-size: 18px;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+    }  
+
+
+
+
 /* end */
 
 /*slider*/
@@ -349,7 +382,7 @@ nav a:hover {
 
 .projecthero img {
       margin-bottom: 20px;
-      margin-top: 50px; 
+      margin-top: 50px;
 }
 
 .projectmain {
